done Changes on keep image

--- a/src/App.css
+++ b/src/App.css
@@ -38,9 +38,12 @@
   text-align: center;
 }
 
-#search {
+/* #search {
   margin-left: 100px;
-}
+} */
 .icons-button {
   margin-right: 30px;
+}
+.view-container {
+  opacity: 0;
 }
