--- a/src/App.css
+++ b/src/App.css
@@ -106,3 +106,56 @@ vertical-align: middle;
 .icons-div {
   margin-left: 7vw;
 }
+/* for display note */
+.cardDisplayNote{
+  height: auto;
+  width:'50vw';
+}
+.inputDisplatNote{
+  border:'none';
+  outline:'none';
+  width:'250px';
+}
+/* for properties */
+.iconDisplay{
+display: flex;
+white-space: nowrap;
+}
+.MuiIconButton-root {
+  flex: 0 0 auto;
+  color: rgba(0, 0, 0, 0.54);
+  /* padding: 12px; */
+  overflow: visible;
+  font-size: 1.5rem;
+  text-align: center;
+  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  border-radius: 50%;
+}
+
+.note-div {
+  width: 80%;
+  display: flex;
+  margin-left: 20%;
+  margin-top: 50px;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+
+.display-card {
+  margin: 10px;
+  width: 300px;
+  height: auto;
+}
+/* for create note */
+.createnote{
+  width:600px;
+  height: 35px;
+  margin-left: 30%;
+}
+.displaynote{
+  margin-top: 20px;
+}
+.allnotes{
+  display:flex;
+  flex-direction: row;
+}
