--- a/src/App.css
+++ b/src/App.css
@@ -159,3 +159,16 @@ white-space: nowrap;
   display:flex;
   flex-direction: row;
 }
+
+.color-styles {
+  width: 160px;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.color-map {
+  width: 30px;
+  height: 30px;
+  margin: 5px;
+}
