--- a/src/App.css
+++ b/src/App.css
@@ -316,3 +316,10 @@ margin-top: 4%;
   display: flex;
   flex-direction: row;  
 }
+
+
+.labelEdit{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
